# Robotics-Software-Engineer-Code-Challenge-Drawing-Shapes-in-3D-Space

./: README.md
src/avatar_challenge/: CMakeLists.txt  package.xml
src/avatar_challenge/config/: shape_1_square.yaml  shape_2_triangle.yaml  shape_3_circle.yaml  shape_4_pentagon.yaml  shape_5_diamond.yaml  shape_6_hexagon.yaml  shape_7_star.yaml  shapes.yaml
src/avatar_challenge/launch/: start.launch.py
src/avatar_challenge/scripts/: shape_drawer.py
